--- a/app/views/gallery_items/_form.html.erb
+++ b/app/views/gallery_items/_form.html.erb
@@ -1,10 +1,9 @@
 <% semantic_form_for @gallery_item, :html => { :multipart => true } do |f| %>
-  <%f.inputs do%>
-<%= f.input :article, :include_blank => false%>
-<%= f.input :description%>
+  <%= f.inputs %>
+
 <%= f.file_field :image%>
  
-<% end %>
+
  <%= f.buttons %>
 <% end %>
 
