--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,23 +2,28 @@
 <html>
 <head>
   <title>LivingETC</title>
-  <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag :all, :formtastic, :formtastic_changes %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
 
+
+
+<ul class="navigation">
+<b>Links >></b>
+<li><a href="/articles">Article</a></li>
+<li><a href="/article_categories">Article Category</a></li>
+<li><a href="/gallery_items">Gallery Items</a></li>
+</li>
+</ul>
+<hr />
 <%= yield %>
 
 
 <br/>
 
 <br/>
-<b>Go to >> </b>
-<li><a href="http://localhost:3000/articles">Article</a></li>
-
-<li><a href="http://localhost:3000/article_categories">Article Category</a></li>
-<li><a href="http://localhost:3000/gallery_items">Gallery Items</a></li>
 
 </body>
 </html>
